--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "soudis/plugin-seo",
+  "name": "@soudis/plugin-seo",
   "version": "1.8.0",
   "description": "Make your Strapi content SEO friendly.",
   "strapi": {
